--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=myServerAddress;Database=myDataBase;Trusted_Connection=True;"
+    "DefaultConnection": "Server=desk;Database=eapp;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
