fix: switch ky for jwt

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=desk;Database=eapp;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "Z7r#kT9vL@3pY!q2WdX$fVgN^mB6sC1e",
+    "Key": "Z7r#kT9vL@3pY!q2WdX$fVgN^mB61e",
     "Issuer": "http://localhost:5104",
     "Audience": "http://localhost:4200"
   }
