--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,9 @@
     "DefaultConnection": "Server=desk;Database=eapp;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "Z7r#kT9vL@3pY!q2WdX$fVgN^mB61e",
+    "Key": "c2FtcGxlQ2hhbGxlL1F1ZXN0YW1lQXJlU3VwZXJzQ29tYXBwbGV4VGV4dCk=",
     "Issuer": "http://localhost:5104",
     "Audience": "http://localhost:4200"
   }
 }
+gi
