fix: adjust connection string to support all local user setups

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=notez;Database=eapp;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=eapp;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "c2FtcGxlQ2hhbGxlL1F1ZXN0YW1lQXJlU3VwZXJzQ29tYXBwbGV4VGV4dCk=",
